fix: implement latest feedback

--- a/content/08-cardano-sidechains/03-example-evm-sidechain/05-transferring-tokens.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/05-transferring-tokens.mdx
@@ -169,7 +169,7 @@ Verify amount you locked in your account:
 cardano-cli query utxo --testnet-magic 7 --address $MC_ADDR
 ```
 
-🎉 Congradulations! At this point, you have successfully claimed your `SC_Token` on the main chain.
+🎉 Congratulations! At this point, you have successfully claimed your `SC_Token` on the main chain.
 
 # Transfering tokens from the main chain to a sidechain
 
@@ -207,5 +207,5 @@ curl -L -X POST <PENDING_URL> -H 'Content-type:application/json' -d '{
 
 Tip: Balance may be checked on a compatible Web3 wallet configured to the EVM sidechain testnet network.
 
-🎉 Congradulations! At this point, you have successfully burned your main chain `SC_Token` for a native sidechain `SC_Token`.
+🎉 Congratulations! At this point, you have successfully burned your main chain `SC_Token` for a native sidechain `SC_Token`.
 
