--- a/content/08-cardano-sidechains/03-example-evm-sidechain/06-api.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/06-api.mdx
@@ -69,6 +69,7 @@ For accounts, The only accounts checked are those that are known to exist (ie, t
 
 - `debug_storageRangeAt`: optional  
 - `debug_accountRange`: optional  
+- `debug_traceTransaction endpoint`: optional
 
 ## Support for test tooling (Web3.js, Metamask…)
 
