--- a/content/05-cardano-testnet/03-getting-started.mdx
+++ b/content/05-cardano-testnet/03-getting-started.mdx
@@ -3,7 +3,7 @@ title: Getting started
 metaTitle: Getting started with the Cardano testnet
 ---
 
->Note that the **Cardano testnet** is no longer recommended for testing purposes. The community is encouraged to use preview and pre-production testnets explained below. 
+>Note that the **Cardano testnet** is no longer recommended for testing purposes. The community is encouraged to use preview and pre-production testnet environments explained below. 
 
 To get started and join Cardano testnets, you should install and configure the Cardano node and the command line interface (CLI), configure your testing environment, and generate payment keys and addresses. Note, that you will also need [to get some test ada](/cardano-testnet/tools/faucet) to test your transactions. 
 
@@ -54,9 +54,9 @@ For more details, see:
 
 ### Early-stage testing networks
 
-**Vasil devnet**
+**Devnet**
 
-Vasil devnet is the network for early involvement and functionality testing before a release candidate is mature. It is meant for projects such as DApps that wish to explore new features as soon as they are available.
+Devnet is the network for early involvement and functionality testing before a release candidate is mature. It is meant for projects such as DApps that wish to explore new features as soon as they are available.
 
 [**Devnet configurations**](https://book.world.dev.cardano.org/environments.html#vasil-dev)
 
