fix: update placeholder urls

--- a/content/08-cardano-sidechains/03-example-evm-sidechain/01-network-details.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/01-network-details.mdx
@@ -5,8 +5,8 @@ metaTitle: Network details
 
 The Example EVM sidechain testnet environment consists of two networks:
 
-1. EVM sidechain testnet (sidechain, SC)
-2. Cardano testnet (main chain, MN)
+1. EVM sidechain Testnet (side chain, SC)
+2. A *dedicated* Cardano testnet (main chain, MN)
 
 ## Networks
 
@@ -17,11 +17,19 @@ The Example EVM sidechain testnet environment consists of two networks:
 
 ## Network utilities
 
+### Example EVM Sidechain
+
 |  |  | 
 | --- | :---: |
-| RPC | <PENDING_URL> |
-| Block Explorer | <PENDING_URL>   |
-| Faucet | <PENDING_URL>   |
+| RPC | https://faucet.sidechain.evmtestnet.iohkdev.io/ |
+| Block Explorer | http://explorer.sidechain.evmtestnet.iohkdev.io/   |
+| Faucet | https://faucet.sidechain.evmtestnet.iohkdev.io/ |
+
+### *Dedicated* Cardano Testnet
+
+|  |  | 
+| --- | :---: |
+| Faucet | https://faucet.sidechain.evmtestnet.iohkdev.io/ | 
 
 ## Network notifications
 
