--- a/content/08-cardano-sidechains/03-example-evm-sidechain/02-create-and-fund-accounts.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/02-create-and-fund-accounts.mdx
@@ -48,4 +48,4 @@ evm-sc-cli generate-keys --type ecdsa
 
 (Add 0x to your public address)
 
-Request test SC_Token using the web-app: <PENDING_URL>
+Request test SC_Token using the web-app: https://faucet.sidechain.evmtestnet.iohkdev.io/
