--- a/content/08-cardano-sidechains/03-example-evm-sidechain/03-metamask.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/03-metamask.mdx
@@ -23,10 +23,10 @@ Back up your wallet seed phrase and store it in a safe place.
 Settings > Networks > Add Network > Input the following settings and save.
 
 - Network Name: `EVM sidechain Tesnet`
-- New RPC URL: `<PENDING_URL>`
+- New RPC URL: `https://faucet.sidechain.evmtestnet.iohkdev.io/`
 - Chain ID: `78`
 - Currency Symbol: `SC_Token`<sup>1</sup>
-- Block Explorer URL: `<PENDING_URL>`
+- Block Explorer URL: `http://explorer.sidechain.evmtestnet.iohkdev.io/`
 
 Now you can select the Cardano EVM sidechain network from MetaMask:
 
