--- a/content/08-cardano-sidechains/03-example-evm-sidechain/04-sidechain-token.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/04-sidechain-token.mdx
@@ -11,7 +11,7 @@ metaTitle: SC_Token and faucet
 
 ## How to get SC_Token?
 
-IO Global maintains a faucet at <PENDING_URL> for testing purposes. The faucet dispenses test SC_Token that you can use to pay the gas fees on smart contracts that you run on the EVM sidechain testnet. You can claim one test SC_Token every 24 hours. You cannot swap the test SC_Token tokens you claim from the faucet for any other token, nor can you use them to make any purchases.  
+IO Global maintains a faucet at https://faucet.sidechain.evmtestnet.iohkdev.io/ for testing purposes. The faucet dispenses test SC_Token that you can use to pay the gas fees on smart contracts that you run on the EVM sidechain testnet. You can claim one test SC_Token every 24 hours. You cannot swap the test SC_Token tokens you claim from the faucet for any other token, nor can you use them to make any purchases.  
 
 ## What is gas?
 
