--- a/content/08-cardano-sidechains/03-example-evm-sidechain/04-deploy-smart-contracts/03-verify-contract.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/04-deploy-smart-contracts/03-verify-contract.mdx
@@ -19,8 +19,7 @@ You need access to the source code of the contract before you start. This can be
 There are several publicly available products to flatten source code; that is to incorporate all included files into one file.
 
 ## Accessing the block explorer 
-From any supported browser, go to the URL  
-<PENDING_URL> 
+From any supported browser, go to the URL http://explorer.sidechain.evmtestnet.iohkdev.io/. 
 
 The main screen shows the current head of the chain.
 
