--- a/content/08-cardano-sidechains/03-example-evm-sidechain/01-network-details.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/01-network-details.mdx
@@ -6,7 +6,7 @@ metaTitle: Network details
 The Example EVM sidechain testnet environment consists of two networks:
 
 1. EVM sidechain testnet (sidechain, SC)
-2. Cardano testnet (main chain, MN)
+2. A *dedicated* Cardano testnet (main chain, MN)
 
 ## Networks
 
@@ -17,12 +17,19 @@ The Example EVM sidechain testnet environment consists of two networks:
 
 ## Network utilities
 
+### Example EVM Sidechain
+
 |  |  | 
 | --- | :---: |
-| RPC | <PENDING_URL> |
-| Block Explorer | <PENDING_URL>   |
-| Faucet | <PENDING_URL>   |
+| RPC | https://faucet.sidechain.evmtestnet.iohkdev.io/ |
+| Block Explorer | http://explorer.sidechain.evmtestnet.iohkdev.io/   |
+| Faucet | https://faucet.sidechain.evmtestnet.iohkdev.io/   |
 
+### *Dedicated* Cardano Testnet
+
+|  |  | 
+| --- | :---: |
+| Faucet | https://faucet.cardano.evmtestnet.iohkdev.io/basic-faucet
 ## Network notifications
 
 Announcements for new releases, network disruptions, and other updates will be announced in the `#ask-sidechains` channel in the [IO Technical Communities Discord](https://discord.com/invite/inputoutput).
