fix: minor format change to solve netlify build

--- a/content/08-cardano-sidechains/03-example-evm-sidechain/01-network-details.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechain/01-network-details.mdx
@@ -25,7 +25,7 @@ The Example EVM sidechain testnet environment consists of two networks:
 | Block Explorer | http://explorer.sidechain.evmtestnet.iohkdev.io/   |
 | Faucet | https://faucet.sidechain.evmtestnet.iohkdev.io/   |
 
-### *Dedicated* Cardano Testnet
+### Dedicated Cardano Testnet
 
 |  |  | 
 | --- | :---: |
