Update links to ledger specs

--- a/content/04-explore-cardano/10-relevant-research-papers.mdx
+++ b/content/04-explore-cardano/10-relevant-research-papers.mdx
@@ -36,15 +36,13 @@ protocol.
 
 **Relevant specifications:**
 
-[A Formal Specification of the Cardano Ledger](https://hydra.iohk.io/build/793054/download/1/ledger-spec.pdf)
+[A Formal Specification of the Cardano Ledger](https://github.com/input-output-hk/cardano-ledger/releases/latest/download/byron-ledger.pdf "A Formal Specification of the Cardano Ledger")
 
-[Specification of the Blockchain Layer](https://hydra.iohk.io/build/761704/download/1/blockchain-spec.pdf)
+[Specification of the Blockchain Layer](https://github.com/input-output-hk/cardano-ledger/releases/latest/download/byron-blockchain.pdf "Specification of the Blockchain Layer")
 
 [Formal Specification for a Cardano Wallet](https://iohk.io/en/research/library/papers/formal-specification-for-a-cardano-wallet/)
 
-[Cardano on-the-wire Specification](https://hydra.iohk.io/build/3156433/download/1/binary.pdf)
-
-[Small Step Semantics for Cardano](https://hydra.iohk.io/build/3156322/download/1/small-step-semantics.pdf)
+[Small Step Semantics for Cardano](https://github.com/input-output-hk/cardano-ledger/releases/latest/download/small-step-semantics.pdf)
 
 ### Shelley
 
@@ -70,9 +68,9 @@ environment once the majority of nodes are run by network participants.
 
 **Relevant specifications:**
 
-[Engineering Design Specification for Delegation and Incentives in Cardano–Shelley](https://hydra.iohk.io/build/790053/download/1/delegation_design_spec.pdf)
+[Engineering Design Specification for Delegation and Incentives in Cardano–Shelley](https://github.com/input-output-hk/cardano-ledger/releases/latest/download/shelley-delegation.pdf "Design Specification for Delegation and Incentives in Cardano")
 
-[A Specification of the Non-Integral Calculations in the Shelley Ledger](https://hydra.iohk.io/build/3156326/download/1/non-integer-calculations.pdf)
+[A Specification of the Non-Integral Calculations in the Shelley Ledger](https://github.com/input-output-hk/cardano-ledger/releases/latest/download/non-integer-calculations.pdf)
 
 ### Goguen
 
@@ -102,6 +100,13 @@ and non-fungible token standards.
 
 [Translation Certification for Smart Contracts](https://iohk.io/en/research/library/papers/translation-certification-for-smart-contracts/)
 
+**Relevant specifications:**
+
+[A Formal Specification of the Cardano Ledger with a Native
+Multi-Asset Implementation](https://github.com/input-output-hk/cardano-ledger/releases/latest/download/mary-ledger.pdf "A Formal Specification of the Cardano Ledger with a Native Multi-Asset Implementation")
+
+[A Formal Specification of the Cardano Ledger integrating Plutus Core](https://github.com/input-output-hk/cardano-ledger/releases/latest/download/alonzo-ledger.pdf "A Formal Specification of the Cardano Ledger integrating Plutus Core")
+
 ### Basho
 
 An era of optimization, improving the scalability and interoperability of the
@@ -123,6 +128,10 @@ potential to extend the network’s capabilities.
 
 [Djed: A Formally Verified Crypto-Backed Pegged Algorithmic Stablecoin](https://iohk.io/en/research/library/papers/djeda-formally-verified-crypto-backed-pegged-algorithmic-stablecoin/)
 
+**Relevant specifications:**
+
+[Formal Specification of the Cardano Ledger for the Babbage era](https://github.com/input-output-hk/cardano-ledger/releases/latest/download/babbage-ledger.pdf "Formal Specification of the Cardano Ledger for the Babbage era")
+
 ### Voltaire
 
 A development era enabling the Cardano network to become a self-sustaining
@@ -137,3 +146,9 @@ future development of the blockchain.
 [Updatable Blockchains](https://eprint.iacr.org/2020/887.pdf)
 
 [SoK: Blockchain Governance](https://iohk.io/en/research/library/papers/sokblockchain-governance/)
+
+**Relevant specifications:**
+
+[CIP-1694: An On-Chain Decentralized Governance Mechanism for Voltaire](https://github.com/JaredCorduan/CIPs/blob/voltaire-v1/CIP-1694/README.md)
+
+Formal specification is a work in progress
